# rust-github-actions-test

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: lib.rs  main.rs
