[package]
name = "rust-github-actions-test"
version = "0.1.0"
authors = ["Martin Michaelis <code@mgjm.de>"]
edition = "2021"

[[bin]]
name = "rust-github-actions-test"
required-features = ["cli"]

[features]
default = ["example"]
example = []
cli = ["example"]

[dependencies]
clap = { version = "4.5.6", features = ["derive"] }
hidapi = "2.6.1"
